# renum-suna-core

./: .gitignore  ANALISE_VIABILIDADE_EQUIPES_AGENTES.md  BACKEND_SYNC_COMPLETE.md  DEPLOY_AUTOMATION_GUIDE.md  DIRECTORY_RENAME_CHANGES.md  DIRECTORY_RENAME_SUMMARY.md  FRONTEND_BUILD_ERRORS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LAZY_COMPONENTS_FIX_REPORT.md  PYTHON_ENVIRONMENT_UPDATE_COMPLETE.md  REACT_QUERY_V5_MIGRATION_COMPLETE.md  README_ENVIRONMENT_SETUP.md  README_SIMPLIFIED_SETUP.md  RECOMENDACOES_FINAIS.md  RENUM_SISTEMA_ANALISE_ESTRUTURAL_COMPLETA.md  RENUM_SUNA_INTEGRATION_POINTS.md  ROADMAP_MELHORIAS_FUTURAS.md  SQL_VERIFICATION_REPORT.md  SYNC_BACKEND_CHECKLIST.md  SYNC_BACKEND_INSTRUCTIONS.md  SYNC_CHANGES_REPORT.md  SYNC_ISSUES.md  SYNC_SUMMARY.md  TASK_7.1_COMPLETION_REPORT.md  TASK_7.2_FINAL_COMPLETION_REPORT.md  TASK_7.2_FINAL_STATUS_REPORT.md  TASK_7.3.3_COMPLETION_REPORT.md  VERCEL_DEPLOY_FIXES_SUMMARY.md  VERCEL_ENV_VARS_FIX_GUIDE.md  VERIFICACAO_SISTEMA.md  WEBSOCKET_AND_API_FIXES_ANALYSIS.md  WEBSOCKET_FIXES_SUMMARY.md  WEBSOCKET_FIX_COMPLETION_SUMMARY.md  WEBSOCKET_TASK_7.3.2_COMPLETED.md  WEBSOCKET_URL_FIX_REPORT.md  WORKSPACE_CLEANUP_PLAN.md  admin_tables_for_sql_editor.sql  admin_tables_for_sql_editor_fixed.sql  align_frontend_dependencies.js  analyze_bundle.js  (+81 more)
renum-backend/: .gitignore  API_DOCUMENTATION.md  CONCLUSAO.md  DEPLOY_GUIDE.md  Dockerfile  EXECUTION_INSTRUCTIONS.md  FASES_1_2_CONCLUSAO.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  INTEGRATION_INSTRUCTIONS.md  INTEGRATION_SUMMARY.md  MIGRATION.md  (+16 more)
(+737 files in other folders)
